# qpgraph

./: ChangeLog  DESCRIPTION  NAMESPACE  NEWS  README.md  cleanup  configure  configure.ac
.github/workflows/: check-bioc.yml
R/: AllClass.R  AllGeneric.R  Defunct.R  Deprecated.R  HMgmm-methods.R  HMgmm.R  SsdMatrix-class.R  SsdMatrix.R  UGgmm-methods.R  UGgmm.R  Utils.R  eQTLcross-methods.R  eQTLcross.R  eQTLnetwork-methods.R  eQTLnetworkEstimate.R  eQTLnetworkEstimationParam-methods.R  graphParam-methods.R  qpCItest.R  qpGraph-methods.R  qpSimulate.R  qpgraph.R  zzz.R
data/: EcoliOxygen.RData
inst/: CITATION
inst/doc/: qpTxRegNet.Rnw  qpgraph.bib
inst/snow/: RMPInode.R  RNWSnode.R  RPVMnode.R  RSOCKnode.R
inst/unitTests/: test_qpCItest.R  test_qpNrr.R  test_rgraphBAM.R
man/: EcoliOxygen.Rd  HMgmm-class.Rd  SsdMatrix-class.Rd  UGgmm-class.Rd  eQTLcross-class.Rd  eQTLnetwork-class.Rd  eQTLnetworkEstimate.Rd  eQTLnetworkEstimationParam-class.Rd  filterCollinearities.Rd  graphParam-class.Rd  qp-package.Rd  qpAllCItests.Rd  qpAnyGraph.Rd  qpAvgNrr.Rd  qpBoundary.Rd  qpCItest.Rd  qpClique.Rd  qpCliqueNumber.Rd  qpCov.Rd  qpDscale.Rd  qpEdgeNrr.Rd  qpFunctionalCoherence.Rd  qpG2Sigma.Rd  qpGenNrr.Rd  qpGetCliques.Rd  qpGraph-class.Rd  qpGraph.Rd  qpGraphDensity.Rd  qpHTF.Rd  qpHist.Rd  qpI2K.Rd  qpIPF.Rd  qpImportNrr.Rd  qpK2ParCor.Rd  qpK2R.Rd  qpNrr.Rd  qpPAC.Rd  qpPCC.Rd  qpPRscoreThreshold.Rd  qpPathWeight.Rd  (+16 more)
src/: Makevars.in  cliquer.c  graph.c  misc.h  qpgraph.c  reorder.c  reorder.h  set.h
tests/: runTests.R
vignettes/: eQTLnetworks.Rnw  qpTxRegNet.Rnw  qpgraph.bib  qpgraphSimulate.Rnw
